force-app/main/default/objects/Demand_Account__x/Demand_Account__x.object-meta.xml
<CustomObject>
    <description>Demand Accounts for cache customers.</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>DemandAccount</externalName>
    <label>Deposit Account</label>
    <pluralLabel>Deposit Accounts</pluralLabel>
</CustomObject>