force-app/main/default/objects/Demand_Account__x/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Account Category</description>
    <externalDeveloperName>AccountCategory</externalDeveloperName>
    <label>Account Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>