force-app/main/default/objects/Demand_Account__x/fields/Account_Name_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Line_1__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Account Name - Line 1</description>
    <externalDeveloperName>AccountNameLine1</externalDeveloperName>
    <label>Account Name - Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>