force-app/main/default/objects/Demand_Account__x/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_CACHE</complianceGroup>
    <description>Account status</description>
    <externalDeveloperName>AccountStatus</externalDeveloperName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>