force-app/main/default/objects/Demand_Account__x/fields/Account_To_Debit_For_Interest__c.field-meta.xml
<CustomField>
    <fullName>Account_To_Debit_For_Interest__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Interest Pay Method</description>
    <externalDeveloperName>AccountToDebitForInterest</externalDeveloperName>
    <label>Account to debit for Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>