force-app/main/default/objects/Demand_Account__x/fields/Agent_Collection_Items__c.field-meta.xml
<CustomField>
    <fullName>Agent_Collection_Items__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ ALS COLLECT ITEM FEE</description>
    <externalDeveloperName>AgentCollectionItems</externalDeveloperName>
    <label>Agent Collection Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>