force-app/main/default/objects/Demand_Account__x/fields/Agent_Credits__c.field-meta.xml
<CustomField>
    <fullName>Agent_Credits__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ ALS ELECT CR FEE</description>
    <externalDeveloperName>AgentCredits</externalDeveloperName>
    <label>Agent Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>