force-app/main/default/objects/Demand_Account__x/fields/Annual_Base_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Base_Fee__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Service Charge Waive Code</description>
    <externalDeveloperName>AnnualBaseFee</externalDeveloperName>
    <label>Annual Base Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>