force-app/main/default/objects/Demand_Account__x/fields/Annual_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD ANNUAL REVIEW</description>
    <externalDeveloperName>AnnualReviewDate</externalDeveloperName>
    <label>Annual Review Date</label>
    <type>Date</type>
</CustomField>