force-app/main/default/objects/Demand_Account__x/fields/Bank_Fee_Cycle_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fee_Cycle_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Service Change Type Code</description>
    <externalDeveloperName>BankFeeCycleCode</externalDeveloperName>
    <label>Bank Fee Cycle Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>