force-app/main/default/objects/Demand_Account__x/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Commit flag</description>
    <externalDeveloperName>Commitment</externalDeveloperName>
    <label>Commitment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>