force-app/main/default/objects/Demand_Account__x/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Cost Centre</description>
    <externalDeveloperName>CostCentre</externalDeveloperName>
    <label>Cost Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>