force-app/main/default/objects/Demand_Account__x/fields/Credit_Interest_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Interest_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Credit Interest Code</description>
    <externalDeveloperName>CreditInterestCode</externalDeveloperName>
    <label>Credit Interest Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>00 - ODTD NON INTEREST BEARING &gt;$50,000</label>
            </value>
            <value>
                <fullName>A1</fullName>
                <label>A1 - CALCULATED CASH RATE</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>A2 - CALCULATED CASH RATE</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <label>BC - BANK BILL SWAP REFERENCE RATE CR</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>BD - BANK BILL SWAP REFERENCE RATE CR</label>
            </value>
            <value>
                <fullName>B1</fullName>
                <label>B1 - CERTIFICATE OF DEPOSIT - ONE DAY</label>
            </value>
            <value>
                <fullName>B2</fullName>
                <label>B2 - CERTIFICATE OF DEPOSIT - ONE DAY</label>
            </value>
            <value>
                <fullName>B3</fullName>
                <label>B3 - ANZ CORP INVEST CCR</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>CA - BUSINESS DEPOSIT RATE</label>
            </value>
            <value>
                <fullName>CB</fullName>
                <label>CB - C.A.B.I. - SOLICITORS TRUST A/C.SA</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>CC - C.A.B.I. - SOLICITORS TRUST A/C.VIC</label>
            </value>
            <value>
                <fullName>CD</fullName>
                <label>CD - C.A.B.I. - SOLICITORS TRUST A/C.NSW</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>CE - C.A.B.I. - SOLICITORS TRUST A/C.NT</label>
            </value>
            <value>
                <fullName>CF</fullName>
                <label>CF - C.A.B.I. - SOLICITORS TRUST A/C.ACT</label>
            </value>
            <value>
                <fullName>CG</fullName>
                <label>CG - C.A.B.I. - SOLICITORS TRUST A/C.QLD</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>CH - C.A.B.I. - SOLICITORS TRUST A/C.TAS</label>
            </value>
            <value>
                <fullName>CI</fullName>
                <label>CI - C.A.B.I. - CONVEYANCERS A/C VIC</label>
            </value>
            <value>
                <fullName>CJ</fullName>
                <label>CJ - C.A.B.I. - SOLICITORS TRUST A/C.WA</label>
            </value>
            <value>
                <fullName>CK</fullName>
                <label>CK - C.A.B.I. - TRUST,LAW INSTITUTE.VIC</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>CL - C.A.B.I. - TRUST,LAW INSTITUTE.NSW</label>
            </value>
            <value>
                <fullName>CM</fullName>
                <label>CM - C.A.B.I. - TRUST,LAW INSTITUTE.NT</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>CN - C.A.B.I. - TRUST,LAW INSTITUTE.ACT</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>CO - C.A.B.I. - CARAVAN PARK BOND WA</label>
            </value>
            <value>
                <fullName>CP</fullName>
                <label>CP - C.A.B.I. - AGENTS TRUST A/C TAS</label>
            </value>
            <value>
                <fullName>CQ</fullName>
                <label>CQ - C.A.B.I. - TRUST,LAW INSTITUTE.SA</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>CR - C.A.B.I. - TRUST,LAW INSTITUTE.WA</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>CS - C.A.B.I. (MMB) - OTHER</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>CT - C.A.B.I. - OTHER</label>
            </value>
            <value>
                <fullName>CU</fullName>
                <label>CU - C.A.B.I. - AGENTS TRUST A/C WA</label>
            </value>
            <value>
                <fullName>CV</fullName>
                <label>CV - C.A.B.I. - AGENTS TRUST A/C ACT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>