force-app/main/default/objects/Demand_Account__x/fields/Credit_Interest_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Credit_Interest_Cycle__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Credit Interest Cycle</description>
    <externalDeveloperName>CreditInterestCycle</externalDeveloperName>
    <label>Credit Interest Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>