force-app/main/default/objects/Demand_Account__x/fields/Credit_Interest_To__c.field-meta.xml
<CustomField>
    <fullName>Credit_Interest_To__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Interest Pay Method</description>
    <externalDeveloperName>CreditInterestTo</externalDeveloperName>
    <label>Credit Interest To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>