force-app/main/default/objects/Demand_Account__x/fields/Current_Gross_Limit_1__c.field-meta.xml
<CustomField>
    <fullName>Current_Gross_Limit_1__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT AMOUNT</description>
    <externalDeveloperName>CurrentGrossLimit1</externalDeveloperName>
    <label>Current Gross Limit 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>