force-app/main/default/objects/Demand_Account__x/fields/Current_Gross_Limit_2__c.field-meta.xml
<CustomField>
    <fullName>Current_Gross_Limit_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT AMOUNT 2</description>
    <externalDeveloperName>CurrentGrossLimit2</externalDeveloperName>
    <label>Current Gross Limit 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>