force-app/main/default/objects/Demand_Account__x/fields/Current_Interest_Basis__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Basis__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Interest Code</description>
    <externalDeveloperName>CurrentInterestBasis</externalDeveloperName>
    <label>Current Interest Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>