force-app/main/default/objects/Demand_Account__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_CACHE</complianceGroup>
    <description>Customer indirect lookup using External Id</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demand Accounts</relationshipLabel>
    <relationshipName>Demand_Account</relationshipName>
    <type>IndirectLookup</type>
</CustomField>