force-app/main/default/objects/Demand_Account__x/fields/Direct_Bank_Fees_To__c.field-meta.xml
<CustomField>
    <fullName>Direct_Bank_Fees_To__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Direct bank fees to</description>
    <externalDeveloperName>DirectBankFeesTo</externalDeveloperName>
    <label>Direct Bank Fees To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>