force-app/main/default/objects/Demand_Account__x/fields/Direct_Excess_Fee_To__c.field-meta.xml
<CustomField>
    <fullName>Direct_Excess_Fee_To__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Direct Excess Fee to…</description>
    <externalDeveloperName>DirectExcessFeeTo</externalDeveloperName>
    <label>Direct Excess Fee to…</label>
    <length>255</length>
    <type>Text</type>
</CustomField>