force-app/main/default/objects/Demand_Account__x/fields/Direct_Excess_Fee_To_Alternative_DDA__c.field-meta.xml
<CustomField>
    <fullName>Direct_Excess_Fee_To_Alternative_DDA__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Direct Excess Fee to Alternative DDA</description>
    <externalDeveloperName>DirectExcessFeeToAlternativeDDA</externalDeveloperName>
    <label>Direct Excess Fee to alternative DDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>