force-app/main/default/objects/Demand_Account__x/fields/Domicile_Branch__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Branch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Branch Number</description>
    <externalDeveloperName>DomicileBranch</externalDeveloperName>
    <label>Domicile Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>