force-app/main/default/objects/Demand_Account__x/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Effective Date</description>
    <externalDeveloperName>EffectiveDate</externalDeveloperName>
    <label>Effective Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>