force-app/main/default/objects/Demand_Account__x/fields/Electronic_Credits__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Credits__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ ALS ELECT DR FEE</description>
    <externalDeveloperName>ElectronicCredits</externalDeveloperName>
    <label>Electronic Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>