force-app/main/default/objects/Demand_Account__x/fields/Electronic_Debits__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Debits__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ ALS COLLECT ITEM FEE</description>
    <externalDeveloperName>ElectronicDebits</externalDeveloperName>
    <label>Electronic Debits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>