force-app/main/default/objects/Demand_Account__x/fields/Excess_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Excess_Fee_Amount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Excess Fee Amount</description>
    <externalDeveloperName>ExcessFeeAmount</externalDeveloperName>
    <label>Excess Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>