force-app/main/default/objects/Demand_Account__x/fields/Expiry_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_1__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT END 4</description>
    <externalDeveloperName>ExpiryDate1</externalDeveloperName>
    <label>Expiry Date 1</label>
    <type>Date</type>
</CustomField>