force-app/main/default/objects/Demand_Account__x/fields/Expiry_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT END 2</description>
    <externalDeveloperName>ExpiryDate2</externalDeveloperName>
    <label>Expiry Date 2</label>
    <type>Date</type>
</CustomField>