force-app/main/default/objects/Demand_Account__x/fields/Expiry_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_3__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT END 3</description>
    <externalDeveloperName>ExpiryDate3</externalDeveloperName>
    <label>Expiry Date 3</label>
    <type>Date</type>
</CustomField>