force-app/main/default/objects/Demand_Account__x/fields/Facility_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Facility_Start_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Orion Facility Start Date</description>
    <externalDeveloperName>FacilityStartDate</externalDeveloperName>
    <label>Facility Start Date</label>
    <type>Date</type>
</CustomField>