force-app/main/default/objects/Demand_Account__x/fields/Facility_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type_1__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT RT IND 4</description>
    <externalDeveloperName>FacilityType1</externalDeveloperName>
    <label>Facility Type 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>