force-app/main/default/objects/Demand_Account__x/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ OD SER CHRG PAY METHOD</description>
    <externalDeveloperName>Instructions</externalDeveloperName>
    <label>Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>