force-app/main/default/objects/Demand_Account__x/fields/Interest_Basis__c.field-meta.xml
<CustomField>
    <fullName>Interest_Basis__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Debit Interest Rate</description>
    <externalDeveloperName>InterestBasis</externalDeveloperName>
    <label>Interest Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>