force-app/main/default/objects/Demand_Account__x/fields/Interest_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Interest_Cycle__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Debit Interest Pay Cycle Code</description>
    <externalDeveloperName>InterestCycle</externalDeveloperName>
    <label>Interest Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>