force-app/main/default/objects/Demand_Account__x/fields/Last_Limit_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Limit_Change__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Last limit change</description>
    <externalDeveloperName>LastLimitChange</externalDeveloperName>
    <label>Last Limit Change</label>
    <type>Date</type>
</CustomField>