force-app/main/default/objects/Demand_Account__x/fields/Limit_2__c.field-meta.xml
<CustomField>
    <fullName>Limit_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Credit Limit</description>
    <externalDeveloperName>Limit2</externalDeveloperName>
    <label>Limit 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>