force-app/main/default/objects/Demand_Account__x/fields/Limit_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT TYPE 2</description>
    <externalDeveloperName>LimitType2</externalDeveloperName>
    <label>Limit Type 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>