force-app/main/default/objects/Demand_Account__x/fields/Limit_Type_3__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type_3__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT TYPE 3</description>
    <externalDeveloperName>LimitType3</externalDeveloperName>
    <label>Limit Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>81</fullName>
                <label>81 - Basic.</label>
            </value>
            <value>
                <fullName>82</fullName>
                <label>82 - Temporary (1 - 3 months).</label>
            </value>
            <value>
                <fullName>83</fullName>
                <label>83 - Approved Temporary Arrangement (ATA) (&lt; 30 days).</label>
            </value>
            <value>
                <fullName>84</fullName>
                <label>84 - Reducing (Date driven).</label>
            </value>
            <value>
                <fullName>85</fullName>
                <label>85 - Seasonal (Date driven).</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>