force-app/main/default/objects/Demand_Account__x/fields/Mailing_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Mailing Code</description>
    <externalDeveloperName>MailingCode</externalDeveloperName>
    <label>Mailing Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>