force-app/main/default/objects/Demand_Account__x/fields/Managers_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Managers_Review_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LRIS MAN REVIEW DATE</description>
    <externalDeveloperName>ManagersReviewDate</externalDeveloperName>
    <label>Managers Review Date</label>
    <type>Date</type>
</CustomField>