force-app/main/default/objects/Demand_Account__x/fields/Negative_Interest_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Negative_Interest_Applicable__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Negative Interest Applicable</description>
    <externalDeveloperName>NegativeInterestApplicable</externalDeveloperName>
    <label>Negative Interest Applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>