force-app/main/default/objects/Demand_Account__x/fields/Next_Opportunity_To_Reprice__c.field-meta.xml
<CustomField>
    <fullName>Next_Opportunity_To_Reprice__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Orion Reprice Next Opportunity</description>
    <externalDeveloperName>NextOpportunityToReprice</externalDeveloperName>
    <label>Next Opportunity To Reprice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>