force-app/main/default/objects/Demand_Account__x/fields/Next_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Statement_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Next Statement Date</description>
    <externalDeveloperName>NextStatementDate</externalDeveloperName>
    <label>Next Statement Date</label>
    <type>Date</type>
</CustomField>