force-app/main/default/objects/Demand_Account__x/fields/Number_Of_Copies__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Copies__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Number of Copies</description>
    <externalDeveloperName>NumberOfCopies</externalDeveloperName>
    <label>Number of Copies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>