force-app/main/default/objects/Demand_Account__x/fields/Out_Of_Bounds_Pro__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Bounds_Pro__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Out of Bounds Pro.(OBP) Code</description>
    <externalDeveloperName>OutOfBoundsProCode</externalDeveloperName>
    <label>Out of Bounds Pro.(OBP) Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>